# nics-exemption-inactive-employees

./: README.md  pyproject.toml  run_pipeline.py
dashboard/: package.json
dashboard/app/: globals.css
dashboard/public/data/: nics_exemption_results.json
dashboard/src/components/: BaselineTab.jsx  MethodologyTab.jsx  ReformTab.jsx
data/: nics_exemption_results.json
src/nics_exemption/: analysis.py  lfs.py  pipeline.py
tests/: test_analysis.py  test_lfs.py
